syntax = "proto3";

package protosprite;

// This message represents a 2D bounding box.
message BBox {
  int32 x = 1;
  int32 y = 2;
  int32 width = 3;
  int32 height = 4;
};

// This message represents one frame of the sprite.
message Frame {
  int32 frame_index = 1;

  // Since frames can have multiple layers, we embed all non-empty layers here.
  message FrameLayer {
    int32 layer_index = 1;
    BBox sheet_bbox = 2;
    BBox sprite_bbox = 3;
  }

  FrameLayer layer = 2;
  float duration = 3;
};

// Sprites can have named layers, and these layers can be nested.
message Layer {
  string name = 1;
  string parent_layer_name = 2;
  string opacity = 3;
};

// Sprites can have any number of overlapping animations.
message Animation {
  int32 index_start = 1;
  int32 index_end = 2;
};

// Sprites can embed their sprite sheets.
message EmbeddedSpriteSheet {
  enum Encoding {
    ENCODING_UNKNOWN = 0;
    ENCODING_PNG = 1;
  };

  Encoding encoding = 1;
  bytes data = 2;
};

// Sprites can reference external sprite sheets.
message ExternalSpriteSheet {
  oneof source {
    string url = 1;
    string file_name = 2;
  }
};

// Sprite message.
message Sprite {
  string name = 1;

  oneof pixel_source {
    EmbeddedSpriteSheet embedded_sheet = 2;
    ExternalSpriteSheet external_sheet = 3;
  }

  repeated Frame frames = 4;
  repeated Layer layers = 5;
  repeated Animation animations = 6;
};
